--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container" id="main-ui">
         <img src="https://raw.githubusercontent.com/simple-icons/simple-icons/develop/icons/tiktok.svg" class="logo">
         <div id="start-screen">
-            <h2>AI Face Matcher</h2>
+            <h2>Tik Tok</h2>
             <p>Дізнайся, на яку зірку TikTok ти схожий за допомогою AI-аналізу.</p>
             <button class="btn" onclick="init()">Почати сканування</button>
         </div>
@@ -127,3 +127,4 @@
     </script>
 </body>
 </html>
+
